src/Stopwatch.css
#buttons button {
    margin: 5px;
    width: 80px;
    height: 80px;
    vertical-align: top;
    display: inline-block;
    text-align: center;
    -webkit-appearance: none;
    border-radius: 0;
    border: 0;
    background-color: #e4e4e4;
    /* Avoid double tap to zoom? */
    touch-action: manipulation;
}

#buttons button:active{
    background-color: #bbb;
}


#buttons .label {
    display: block;
    font-size: 10px;
}

#buttons button:disabled img {
    opacity: 0.3;
}

.log {
    color: black;
    text-align: left;
    font-size: 14px;
}

.logentry {
    list-style-type: none;
    display: flex;
    align-items: center;
    gap: 10px;
    font-variant-numeric: tabular-nums;
}

.logentry div {
    display: flex;
    align-items: center;
    gap: 10px;
}

.timestamp {
    color: gray;
}

.loginput {
    font-size: 18px;
    border-style: hidden;
    outline: none;
}

#copylog {
    position: absolute;
    z-index: -1;
    opacity: 0;
}

#instructions {
    color: black;
    padding: 10px;
}

#instructions div {
    margin: 10px;
}

#explanation {
    text-align: left;
    line-height: 120%;
}

.audio {
    display: none;
}

.remove-button {
    margin-right: 10px;
}

